# showata

./: .travis.yml  Cargo.toml  README.md  release.toml
.github/: dependabot.yml
examples/: sample_file.ipynb  sample_nalgebra.ipynb  sample_nalgebra.rs  sample_ndarray.ipynb  sample_vega.rs
showata/: Cargo.toml
showata/src/: lib.rs  show_image.rs  show_ndarray.rs  show_vega.rs
src/: display_image.rs  display_iterator.rs  display_nalgebra.rs  display_ndarray.rs  display_vega.rs  lib.rs  show_burn.rs  show_image.rs  show_iterator.rs  show_nalgebra.rs  show_ndarray.rs  show_vega.rs  vegalite.rs
