[package]
name = "showata"
version = "0.1.0"
authors = ["David Bernard <david.bernard.31@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A library of to show data (in browser, evcxr_jupyter) as table, chart..."
repository = "https://github.com/davidB/showata"
readme = "README.md"
category = ["visualization"]
keywords = ["evcxr", "jupyter", "visualization", "plot", "vega"]

[dependencies]
base64 = "0.10.1"
nalgebra = {version = "0.16.13", optional = true}
num-traits = {version = "0.2", optional = true}
ndarray = {version = "0.12.1", optional = true}
#arrow = "0.13.0" # nightly
#vega-lite = {version = "0.0.2", optional = true} # require to made change/experiment in vega-lite
serde = {version = "1.0", optional = true, features = ["derive"]}
serde_json = {version = "1.0.39", optional = true}
derive_builder = {optional = true, git="https://github.com/colin-kiegel/rust-derive-builder"} #  until 0.7.2 is publish
image = {version = "0.21.1" , optional = true}
opener = "0.4.0"
failure = "0.1.5"

[dev-dependencies]
mime = "0.3.13"
csv = "1.0"

[features]
default = ["show_nalgebra", "show_ndarray", "show_vega", "show_image"]
show_nalgebra = ["nalgebra", "num-traits"]
show_ndarray = ["ndarray"]
show_vega = ["serde_json", "serde", "derive_builder"]
show_image = ["image"]
